<resources>
    <string name="app_name">Work Manager Demo</string>

    <!-- Buttons -->
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>

    <string name="blur_title">Select Blur Amount</string>

    <!-- Content descriptions -->
    <string name="description_image">The image to blur and save.</string>

    <!-- Blur levels -->
    <string name="blur_little">A little blurred</string>
    <string name="blur_medium">More blurred</string>
    <string name="blur_most">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>

    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
</resources>