<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.blur.BlurImageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_image"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/filters_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blur_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <RadioGroup
            android:id="@+id/radio_blur_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_blur_lv_1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_blur_little"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_little" />

            <RadioButton
                android:id="@+id/radio_blur_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_medium" />

            <RadioButton
                android:id="@+id/radio_blur_most"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_most" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_work"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
